--- a/nextjs/frontend/package.json
+++ b/nextjs/frontend/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opencampus/ocid-connect-js": "^1.2.6",
+    "@tanstack/react-query": "^5.68.0",
     "clsx": "^2.1.1",
-    "motion": "^12.4.11",
+    "motion": "^12.5.0",
     "next": "15.2.1",
+    "pinata": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.0.2",
+    "viem": "2.x",
+    "wagmi": "^2.14.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
